@@ -1,5 +1,9 @@
 2007-01-30 Joerg Wunsch <j@uriah.heep.sax.de>
 
+	* butterfly.c: Implement ATmega256x support for butterfly/avr109.
+
+2007-01-30 Joerg Wunsch <j@uriah.heep.sax.de>
+
 	* configure.ac: Fix subdir handling.  Now finally, "make distcheck" will
 	include the documentation into the tarball even if the configure had been
 	run without the --enable-doc.
